--- a/barchart-udt-core/src/main/c++/udt/RELEASE_NOTES.txt
+++ b/barchart-udt-core/src/main/c++/udt/RELEASE_NOTES.txt
@@ -1,10 +1,6 @@
-====
-    Copyright (C) 2009-2013 Barchart, Inc. <http://www.barchart.com/>
+version 4.11
 
-    All rights reserved. Licensed under the OSI BSD License.
-
-    http://www.opensource.org/licenses/bsd-license.php
-====
+mostly bug fixes since last version.
 
 version 4.10
 
